--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -26,7 +26,7 @@
 }
 
 .footer__logo-img {
-    height: 80px;
+    height: 160px;
     width: auto;
     object-fit: contain;
 }
